# shifaa

./: .gitignore  E156-PROTOCOL.md  build_dashboard.py  pyproject.toml  review-findings.md
docs/superpowers/plans/: 2026-04-08-shifaa.md
docs/superpowers/specs/: 2026-04-08-shifaa-design.md
papers/: paper1_mercy_map.md  paper2_balance.md  paper3_forecast.md  paper4_path.md  paper5_reckoning.md
src/shifaa/: __init__.py  config.py
src/shifaa/analysis/: __init__.py  advanced.py  advanced2.py  advanced3.py  counterfactual.py  equity_trend.py  forecast.py  regression.py  rei.py
src/shifaa/crosswalk/: __init__.py  gbd_mesh_icd.csv  loader.py
src/shifaa/ctgov/: __init__.py  allocate.py  api.py  fetch.py
src/shifaa/dashboard/: shifaa_atlas.html
src/shifaa/lakehouse/: __init__.py  join.py  reader.py
tests/: conftest.py  test_advanced.py  test_advanced2.py  test_advanced3.py  test_allocate.py  test_counterfactual.py  test_crosswalk.py  test_ctgov_api.py  test_equity_trend.py  test_fetch.py  test_forecast.py  test_join.py  test_reader.py  test_regression.py  test_rei.py
tests/fixtures/: crosswalk_sample.csv  ctgov_study_sample.json
