[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shifaa"
version = "0.1.0"
description = "Global Healing Equity Intelligence — Research Equity Index across IHME, WHO, WB, CT.gov"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2",
    "pyarrow>=15.0",
    "requests>=2.31",
    "statsmodels>=0.14",
    "scipy>=1.12",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["src"]
